lustre/include/obd_support.h
@@ -528,7 +528,6 @@ int obd_alloc_fail(const void *ptr, const char *name, const char *type,
 #define OBD_FAIL_LFSCK_BAD_NETWORK	0x161c
 #define OBD_FAIL_LFSCK_NO_LINKEA	0x161d
 #define OBD_FAIL_LFSCK_BAD_PARENT	0x161e
-#define OBD_FAIL_LFSCK_BAD_PARENT2	0x161f
 #define OBD_FAIL_LFSCK_DANGLING2	0x1620
 #define OBD_FAIL_LFSCK_DANGLING3	0x1621
 #define OBD_FAIL_LFSCK_MUL_REF		0x1622
